# sourcemaxai

./: .dockerignore  .env.example  .gitignore  BRIEF.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  PLAN_AI_RESPONSE_QUALITY.md  PLAN_CHAT_REVAMP.md  PLAN_PROFILE_MINIMAL.md  PLAN_PROXY_TRANSCRIPT.md  PLAN_RAG_CHAT.md  PLAN_RESOURCE_TABS.md  PLAN_SUPABASE_P0_MVP.md  PLAN_TIMESTAMPED_CITATIONS.md  PLAN_UX_REVAMP.md  PLAN_YT_TRANSCRIPT_EXTENSION.md  PROMPT_FINISH_PROXY_PLAN.md  PROXY_CUTOVER_RUNBOOK.md  README.md  TRANSCRIPT_STRATEGY_RESEARCH.md  package-lock.json  railway.json  use_cases_users_and_features_beyond_chat
backend/: Dockerfile  auth.py  config.py  main.py  models.py  observability.py  pyproject.toml  quotas.py  storage.py  worker.py
backend/evals/: chat_quality_cases.json  run_chat_eval.py
backend/pipeline/: aggregate.py  ask.py  chat_context.py  chunk_transcripts.py  fetch_transcripts.py  fetch_videos.py  proxy_pool.py  retrieve.py  run_state.py  schema_versions.py  summarize.py
backend/routes/: channel.py  chat.py  pipeline.py  profile.py  quota.py  videos.py  waitlist.py
backend/scripts/: reconcile_proxy_costs.py
backend/tests/: conftest.py  test_aggregate.py  test_auth.py  test_chat.py  test_chat_context.py  test_chat_eval.py  test_chat_scope.py  test_chunk_transcripts.py  test_config.py  test_config_proxy.py  test_fetch_playlists.py  test_fetch_transcripts.py  test_fetch_videos.py  test_pipeline.py  test_proxy_pool.py  test_quotas.py  test_retrieve.py  test_routes_playlists.py  test_schema_versions.py  test_storage.py  test_summarize.py  (+1 more)
(+61 files in other folders)
