[project]
name = "trace-backend"
version = "0.1.0"
description = "Backend for Trace, an AI tool for cited YouTube creator analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "yt-dlp>=2024.12.0",
    "youtube-transcript-api>=0.6.0",
    "anthropic>=0.42.0",
    "python-dotenv>=1.0.0",
    "pyjwt[crypto]>=2.10.0",
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".pytest_cache", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"
